# swe1-app

./: .coverage  .gitignore  .travis.yml  README.md  db.sqlite3  pyproject.toml  requirements.txt  test.txt
.ebextensions/: django.config
mysite/: settings.py  urls.py
mysite/mysite/: settings.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
polls/: views.py
polls/migrations/: 0001_initial.py
