[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "vir environ"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "2.2"
black = "^23.1.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
